@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h2. 2.4.28 unreleased
+
+* issue #282 resolved, newest Devise release supports Rails 4.1
+
 h2. 2.4.27 February 19, 2014
 
 * for Rails 4.1, use Devise master pending next release of Devise (see issue #282)
